--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "lodash.foreach": "^3.0.3",
     "lodash.template": "^3.6.2",
+    "marked": "^0.3.5",
     "mechturk": "git://github.com/chbrown/mechturk.git",
     "taskrabbit": "0.0.1"
   }
