--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash.template": "^3.6.2",
     "marked": "^0.3.5",
     "mechturk": "git://github.com/chbrown/mechturk.git",
+    "require-dir": "^0.3.0",
     "taskrabbit": "0.0.1"
   }
 }
