--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "author": "Contra",
   "license": "MIT",
   "dependencies": {
+    "async": "^1.4.2",
     "lodash.foreach": "^3.0.3",
     "lodash.template": "^3.6.2",
     "marked": "^0.3.5",
-    "mechturk": "git://github.com/chbrown/mechturk.git",
+    "mturk-api": "^1.0.1",
     "require-dir": "^0.3.0",
     "taskrabbit": "0.0.1"
   }
