--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "lodash.template": "^3.6.2",
     "marked": "^0.3.5",
     "mturk-api": "^1.0.1",
+    "redis": "^1.0.0",
     "require-dir": "^0.3.0",
-    "taskrabbit": "0.0.1"
+    "taskrabbit": "0.0.1",
+    "word-count": "^0.2.1"
+  },
+  "optionalDependencies": {
+    "hiredis": "^0.4.1"
   }
 }
