--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   ],
   "author": "Contra",
   "license": "MIT",
+  "bin": {
+    "movement": "./bin/movement.js"
+  },
   "dependencies": {
     "async": "^1.4.2",
+    "commander": "^2.8.1",
+    "inquirer": "^0.9.0",
     "lodash.foreach": "^3.0.3",
     "lodash.template": "^3.6.2",
     "marked": "^0.3.5",
+    "minimist": "^1.2.0",
     "mturk-api": "^1.0.1",
     "redis": "^1.0.0",
     "require-dir": "^0.3.0",
