--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "async": "^1.4.2",
+    "chalk": "^1.1.1",
     "commander": "^2.8.1",
     "inquirer": "^0.9.0",
     "lodash.foreach": "^3.0.3",
